Fixed overflow issues

--- a/client/src/styles/App.module.scss
+++ b/client/src/styles/App.module.scss
@@ -1,18 +1,6 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow-y: scroll;
-}
-
 .AppContainer {
   min-height: 100vh;
   background-color: black;
   color: white;
+  overflow: hidden;
 }
