--- a/client/src/styles/Page.module.scss
+++ b/client/src/styles/Page.module.scss
@@ -4,6 +4,7 @@
   border-left: 1px solid #111;
   border-right: 1px solid #111;
   background-color: #0b0b0b;
+  padding-bottom: 12px;
 }
 
 .Main {
