--- a/client/src/styles/PostToolbar.module.scss
+++ b/client/src/styles/PostToolbar.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 6px;
+  margin-bottom: 10px;
 }
 
 .toolButton {
