--- a/client/src/styles/Profile.module.scss
+++ b/client/src/styles/Profile.module.scss
@@ -1,8 +1,11 @@
 @import './mixins';
 
 .mainContent {
-  width: fit-content;
-  margin: 0 auto;
+  margin: 24px auto;
+  max-width: 700px;
+  //display: flex;
+  //flex-direction: column;
+  //gap: 16px;
 }
 
 .banner {
