--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -6,7 +6,6 @@
 
 @mixin blog-post-container {
   max-width: 700px;
-  width: 100vw;
   padding: 20px;
   background-color: white;
   color: black;
